--- a/report.html
+++ b/report.html
@@ -66,9 +66,9 @@
                 <div class="card-header" id="heading1" style="background-color:#ecf0f1; border-color:#e74c3c">
                     <div class="row">
                         <div class="col-9">
-                            <a href="profile_page.html">Pedro Santos </a>&nbsp; 
+                            <a href="profile/profile_asUser.html">Pedro Santos </a>&nbsp; 
                             <a class="btn-link" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
-                                <span style="color:black">  said:</span> <h4 class="dropdown-toggle"> Abusive behaviour</h4>   about <a href="profile_page.html">Pedro Santos 	&nbsp; </a>
+                                <span style="color:black">  said:</span> <h4 class="dropdown-toggle"> Abusive behaviour</h4>   about <a href="profile/profile_asUser.html">Pedro Santos 	&nbsp; </a>
                             </a>
                         </div>
                         <div class="col-3">
@@ -93,9 +93,9 @@
             <div class="card">
                 <div class="card-header" id="heading2" style="background-color:#ecf0f1; border-color:#e74c3c"> <div class="row">
                     <div class="col-9">
-                        <a href="profile_page.html"> Mr. Burns </a>&nbsp; 
+                        <a href="profile/profile_asUser.html"> Mr. Burns </a>&nbsp; 
                         <a class="btn-link" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapse1">
-                            <span style="color:black">  said:</span> <h4 class="dropdown-toggle"> Inappropriate content in profile </h4>   about <a href="profile_page.html"> John Silva	&nbsp; </a>
+                            <span style="color:black">  said:</span> <h4 class="dropdown-toggle"> Inappropriate content in profile </h4>   about <a href="profile/profile_asUser.html"> John Silva	&nbsp; </a>
                         </a>
                     </div>
                     <div class="col-3">
@@ -121,7 +121,7 @@
                 <div class="card-header" id="heading3" style="background-color:#ecf0f1; border-color:#e74c3c">
                         <div class="row">
                                 <div class="col-9">
-                                    <a href="profile_page.html"> Steve Jobs </a>&nbsp; 
+                                    <a href="profile/profile_asUser.html"> Steve Jobs </a>&nbsp; 
                                     <a class="btn-link" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapse1">
                                         <span style="color:black">  said:</span> <h4 class="dropdown-toggle">Didn't receive an item </h4>   about <a href="product/product.html"> #computador123 	&nbsp; </a>
                                     </a>
@@ -150,7 +150,7 @@
                 <div class="card-header" id="heading4" style="background-color:#ecf0f1; border-color:#e74c3c">
                     <div class="row">
                             <div class="col-9">
-                                <a href="profile_page.html">Dave Grohl </a>&nbsp; 
+                                <a href="profile/profile_asUser.html">Dave Grohl </a>&nbsp; 
                                 <a class="btn-link" data-toggle="collapse" data-target="#collapse4" aria-expanded="true" aria-controls="collapse1">
                                     <span style="color:black">  said:</span> <h4 class="dropdown-toggle">Received a counterfeit or fake item </h4>   about <a href="product/product.html"> #Guitar Hero 	&nbsp; </a>
                                 </a>
