--- a/report.html
+++ b/report.html
@@ -16,7 +16,7 @@
         <!-- bootswatch flatly theme -->  
         <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
         <!-- links -->
-        <link rel="stylesheet" href="css/landing_page.css">
+        <link rel="stylesheet" href="css/report.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
     </head>
@@ -56,17 +56,17 @@
             </div>  
         </nav>
 
-        <div class="container">
+        <div class="container-fluid">
 
             <h3 class="border-bottom pb-1 mb-4 mt-5"> Account reports </h3>
                    
              <!-- Questions and answers -->
-    <div id="accordion" class="mt-4">
+    <div id="accordion" class="mt-4" id="qAndA">
             <div class="card">
                 <div class="card-header" id="heading1" style="background-color:#ecf0f1; border-color:#e74c3c">
                     <div class="row">
                         <div class="col-9">
-                            <a href="profile/profile_asUser.html">Pedro Santos </a>&nbsp; 
+                            <a href="profile/profile.html">Pedro Santos </a>&nbsp;
                             <a class="btn-link" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
                                 <span style="color:black">  said:</span> <h4 class="dropdown-toggle"> Abusive behaviour</h4>   about <a href="profile/profile_asUser.html">Pedro Santos 	&nbsp; </a>
                             </a>
@@ -79,10 +79,10 @@
                     <div class="card-body"  >
                         This user was rude to me for no apparent reason.
                         <div class="form-group row">
-                            <div class="col-10">
-                                <textarea class="form-control" id="message-text" placeholder="Write your message!"></textarea>
+                            <div class="col-7">
+                                <textarea class="form-control" placeholder="Write your message!"></textarea>
                             </div>
-                            <div class="col-2">
+                            <div class="col-5">
                                     <button type="button" class="btn btn-sm" style="background-color: #464242; color:white"> Send Answer </button>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                       This user is too ugly, can't look to his profile picture! :(
                         <div class="form-group row">
                                 <div class="col-10">
-                                    <textarea class="form-control" id="message-text" placeholder="Write your message!"></textarea>
+                                    <textarea class="form-control" placeholder="Write your message!"></textarea>
                                 </div>
                                 <div class="col-2">
                                         <button type="button" class="btn btn-sm" style="background-color: #464242; color:white"> Send Answer </button>
@@ -121,7 +121,7 @@
                 <div class="card-header" id="heading3" style="background-color:#ecf0f1; border-color:#e74c3c">
                         <div class="row">
                                 <div class="col-9">
-                                    <a href="profile/profile_asUser.html"> Steve Jobs </a>&nbsp; 
+                                    <a href="profile/profile.html"> Steve Jobs </a>&nbsp;
                                     <a class="btn-link" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapse1">
                                         <span style="color:black">  said:</span> <h4 class="dropdown-toggle">Didn't receive an item </h4>   about <a href="product/product.html"> #computador123 	&nbsp; </a>
                                     </a>
@@ -135,7 +135,7 @@
                         I payed a month ago and I have not received any product yet.
                         <div class="form-group row">
                                 <div class="col-10">
-                                    <textarea class="form-control" id="message-text" placeholder="Write your message!"></textarea>
+                                    <textarea class="form-control" placeholder="Write your message!"></textarea>
                                 </div>
                                 <div class="col-2">
                                         <button type="button" class="btn btn-sm" style="background-color: #464242; color:white"> Send Answer </button>
@@ -150,7 +150,7 @@
                 <div class="card-header" id="heading4" style="background-color:#ecf0f1; border-color:#e74c3c">
                     <div class="row">
                             <div class="col-9">
-                                <a href="profile/profile_asUser.html">Dave Grohl </a>&nbsp; 
+                                <a href="profile/profile.html">Dave Grohl </a>&nbsp;
                                 <a class="btn-link" data-toggle="collapse" data-target="#collapse4" aria-expanded="true" aria-controls="collapse1">
                                     <span style="color:black">  said:</span> <h4 class="dropdown-toggle">Received a counterfeit or fake item </h4>   about <a href="product/product.html"> #Guitar Hero 	&nbsp; </a>
                                 </a>
@@ -164,7 +164,7 @@
                         The product I received is fake.
                         <div class="form-group row">
                                 <div class="col-10">
-                                    <textarea class="form-control" id="message-text" placeholder="Write your message!"></textarea>
+                                    <textarea class="form-control" placeholder="Write your message!"></textarea>
                                 </div>
                                 <div class="col-2">
                                         <button type="button" class="btn btn-sm" style="background-color: #464242; color:white"> Send Answer </button>
@@ -179,7 +179,7 @@
                     <div class="card-header" id="heading5" style="background-color:#ecf0f1; border-color:#e74c3c">
                         <div class="row">
                                 <div class="col-9">
-                                    <a href="profile_page.html"> Bill Gates </a>&nbsp; 
+                                    <a href=profile/profile.html> Bill Gates </a>&nbsp;
                                     <a class="btn-link" data-toggle="collapse" data-target="#collapse5" aria-expanded="true" aria-controls="collapse1">
                                         <span style="color:black">  said:</span> <h4 class="dropdown-toggle"> Received item is not in the original condition </h4>   about <a href="product/product.html"> #MacPro 	&nbsp; </a>
                                     </a>
@@ -193,7 +193,7 @@
                         The shoes I bought are more worn than the ones I saw on item's picture.
                         <div class="form-group row">
                                 <div class="col-10">
-                                    <textarea class="form-control" id="message-text" placeholder="Write your message!"></textarea>
+                                    <textarea class="form-control" placeholder="Write your message!"></textarea>
                                 </div>
                                 <div class="col-2">
                                         <button type="button" class="btn btn-sm" style="background-color: #464242; color:white"> Send Answer </button>
@@ -214,7 +214,7 @@
     <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
             <ul class="nav d-flex justify-content-center">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="landing_page.html">Home </a>
+                    <a class="nav-link text-white" href="home/landing_page.html">Home </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="about.html">About</a>
