--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
         
         <!-- Login Form -->
         <div class="container">
-            <form class="mt-5 d-flex flex-column mx-auto p-4 bg-light" id="login">
+            <form action="home/landing_page_user.html" method="get" class="mt-5 d-flex flex-column mx-auto p-4 bg-light" id="login">
                 <h1 class="mx-auto pt-3 mb-5 font-weight-bold"> Login</h1>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email:</label>
@@ -68,7 +68,7 @@
                   <label for="exampleInputPassword1">Password:</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
-                <a href="#" class="text-center mb-2">Don't have an account? Register</a>
+                <a href="register.html" class="text-center mb-2">Don't have an account? Register</a>
                 <button type="submit" class="btn btn-primary mx-auto w-50 mb-3 mt-4">Login</button>
             </form>
         </div>
