--- a/register.html
+++ b/register.html
@@ -57,8 +57,8 @@
 
         
         <!-- Register Form -->
-        <div class="container">
-            <form class="mt-5 d-flex flex-column mx-auto p-4 bg-light" id="register">
+        <div class="container pb-5">
+            <form action="home/landing_page_user.html" method="get" class="mt-5 d-flex flex-column mx-auto p-4 bg-light" id="register">
                 <h1 class="mx-auto pt-3 mb-5 font-weight-bold"> Register</h1>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Username:</label>
@@ -76,7 +76,7 @@
                     <label for="exampleInputPassword1">Confirm Password:</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter Password">
                 </div>
-                <a href="#" class="text-center mb-2">Already have an account? Login</a>
+                <a href="login.html" class="text-center mb-2">Already have an account? Login</a>
                 <button type="submit" class="btn btn-primary mx-auto w-50 mb-3 mt-4">Register</button>
             </form>
         </div>
