add modal contact

--- a/product/product_asBanned.html
+++ b/product/product_asBanned.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Product Page</title>
 
     <!-- Bootstrap -->
@@ -25,9 +26,6 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/product.css">
-
-
-
 </head>
 <body class="website-body">
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
