--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Product Page</title>
 
     <!-- Bootstrap -->
@@ -20,11 +21,11 @@
     <!-- fonts awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
+    <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/product.css">
-
-    <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
 
 
 </head>
