--- a/product/product.html
+++ b/product/product.html
@@ -137,7 +137,43 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, consequatur
                         cupiditate dicta doloremque eligendi</p>
                     <span>
-                        <a href="#" class="btn btn-primary ">Contact</a>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#contactModal"
+                                data-whatever="@getbootstrap"> Contact</button>
+                                <div class="modal fade" id="contactModal" tabindex="-1" role="dialog"
+                                     aria-labelledby="contactModal" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="contactModalLabel">New message</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                        <div class="form-group">
+                                            <label for="recipient-name" class="form-control-label">To:</label>
+                                            <input type="text" class="form-control" id="dest-name">
+                                        </div>
+                                        <div class="form-group">
+                                                <label for="item-name" class="form-control-label">#Item:</label>
+                                                <input type="text" class="form-control" id="item-name">
+                                            </div>
+                                        <div class="form-group">
+                                            <label for="message-text" class="form-control-label">Message:</label>
+                                            <textarea class="form-control" id="contact-text"></textarea>
+                                        </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="closebtn" class="btn btn-outline-success"
+                                                data-dismiss="modal">Close</button>
+                                        <button type="button" id="sendbtn"
+                                                class="btn btn-outline-success">Send message</button>
+                                    </div>
+                                    </div>
+                                </div>
+                                </div>
                         <button class="btn btn-primary report" type="button" data-toggle="modal"
                                 data-target="#exampleModal">
                             Report Account
