--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,7 @@
     <!-- bootswatch flatly theme -->
     <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
     <!-- links -->
-    <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="css/chat.css"> 
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
@@ -78,8 +78,9 @@
                                     <a class="nav-item nav-link" href="#">Spam</a>
                                 </div>
                         </div>
+                        
 
-                        <div class="col-2">
+                        <div class="col-2" >
                                 <button id="sendmsg" type="button" class="btn btn-outline-success d-inline-block align-right"  data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap"> New Message</button>
                                 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
@@ -118,7 +119,7 @@
                 </nav>
             </div>
           
-            <table class="table  table-hover">
+            <table class="table  table-hover ">
                 <thead class="thead-inverse " style="color:#18bc9c; background-color:#464242">
                     <tr>
                         <th scope="col"></th>
