--- a/report.html
+++ b/report.html
@@ -61,7 +61,7 @@
             <h3 class="border-bottom pb-1 mb-4 mt-5"> Account reports </h3>
                    
              <!-- Questions and answers -->
-    <div id="accordion" class="mt-4" id="qAndA">
+    <div id="accordion" class="mt-4 pb-5" id="qAndA">
             <div class="card">
                 <div class="card-header" id="heading1" style="background-color:#ecf0f1; border-color:#e74c3c">
                     <div class="row">
