--- a/chat.html
+++ b/chat.html
@@ -146,10 +146,10 @@
             <tbody>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -161,10 +161,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row" href="message.html">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -176,10 +176,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -191,10 +191,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -206,10 +206,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -221,10 +221,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -236,10 +236,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -251,10 +251,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -266,10 +266,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -281,10 +281,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -296,10 +296,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
@@ -311,10 +311,10 @@
                 </tr>
                 <tr class="clickable-row" data-href="message.html">
                     <th scope="row">
-                        <input type="checkbox" class="marcar"> &nbsp; &nbsp; &nbsp;
+                        <input type="checkbox" class="marcar"> 
                         <a href="#">
                             <i class="far fa-star"></i>
-                        </a> &nbsp; &nbsp; &nbsp;
+                        </a> 
                         <a href="#">
                             <i class="fas fa-trash-alt"></i>
                         </a>
