Update on Body of the pages

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -21,7 +21,7 @@
             <link rel="stylesheet" href="../css/header.css">
             <link rel="stylesheet" href="../css/footer.css">
         </head>
-<body>
+<body class="website-body">
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
