--- a/profile/profile_asBanned.html
+++ b/profile/profile_asBanned.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
-<body>
+<body class="website-body">
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
@@ -90,7 +90,7 @@
 <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
     <ul class="nav d-flex justify-content-center">
         <li class="nav-item active">
-            <a class="nav-link text-white" href="../home/landing_page.html">Home </a>
+            <a class="nav-link text-white" href="landing_page.html">Home </a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="../about.html">About</a>
