--- a/sell_page.html
+++ b/sell_page.html
@@ -296,9 +296,9 @@
 
     <div class="text-right mb-3 mt-3">
         <button type="button" class="btn btn-primary">List auction</button>
-        <button type="button" class="btn btn-secondary">Preview</button>
-        <button type="button" class="btn btn-secondary">Save and continue later</button>
-        <button type="button" class="btn btn-danger">Cancel</button>
+        <a type="button" class="btn btn-secondary" href="product/product_preview.html">Preview</a>
+        <a type="button" class="btn btn-secondary" href="home/landing_page.html">Save and continue later</a>
+        <a type="button" class="btn btn-danger" href="home/landing_page.html">Cancel</a>
     </div>
 
 
