--- a/home/landing_page.html
+++ b/home/landing_page.html
@@ -64,7 +64,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="d-block " src="https://placeimg.com/1600/900/tech" alt="First slide">
                             <div class="carousel-caption d-md-block">
                                 <h3>Some Item</h3>
@@ -73,7 +73,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="d-block " src="https://placeimg.com/480/480/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
                                 <h3>Another Newish Item</h3>
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="d-block " src="https://placeimg.com/400/300/arch" alt="Second slide">
                             <div class="carousel-caption d-md-block">
                                 <h3>Another Newish Item</h3>
@@ -108,7 +108,7 @@
                 <div class="card-columns">
                     <!-- reference to auction here -->
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -123,7 +123,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Grey Camera</h3>
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Samsung Tablet</h3>
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Pixel X2 4GB</h3>
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">toyota motorcycle</h3>
@@ -175,7 +175,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some other new item</h3>
@@ -197,7 +197,7 @@
                 <div class="card-columns">
                     <!-- reference to auction here -->
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -212,7 +212,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -225,7 +225,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -238,7 +238,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -251,7 +251,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
@@ -264,7 +264,7 @@
                         </a>
                     </div>
                     <div class="card mb-3 mt-2 border-info">
-                        <a href="../product.html">
+                        <a href="../product/product.html">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">some item</h3>
