--- a/search.html
+++ b/search.html
@@ -149,7 +149,7 @@
                                         </div>
                                         <div class="container-fluid mt-2" align="center">
                                             <h4>
-                                                <a href="/cenas">Computador para minar Bitcoins</a>
+                                                <a href="product/product.html">Computador para minar Bitcoins</a>
                                             </h4>
                                             <div class="row padding-product-info">
                                                 <div class="w-100"></div>
@@ -177,7 +177,7 @@
                                         </div>
                                         <div class="container-fluid mt-2" align="center">
                                             <h4>
-                                                <a href="/cenas">Sapatilha do Chinês Kim Ung Dos</a>
+                                                <a href="product/product.html">Sapatilha do Chinês Kim Ung Dos</a>
                                             </h4>
                                             <div class="row padding-product-info">
                                                 <div class="w-100"></div>
@@ -207,7 +207,7 @@
                                         </div>
                                         <div class="container-fluid mt-2" align="center">
                                             <h4>
-                                                <a href="/cenas">Carro em 12º mão</a>
+                                                <a href="product/product.html">Carro em 12º mão</a>
                                             </h4>
                                             <div class="row padding-product-info">
                                                 <div class="w-100"></div>
@@ -236,7 +236,7 @@
                                         </div>
                                         <div class="container-fluid mt-2"  align="center">
                                             <h4>
-                                                <a href="/cenas">Computador para minar Bitcoins</a>
+                                                <a href="product/product.html">Computador para minar Bitcoins</a>
                                             </h4>
                                             <div class="row padding-product-info">
                                                 <div class="w-100"></div>
